--- a/React-frontend/src/Pages/UserRegisterLoginForm.css
+++ b/React-frontend/src/Pages/UserRegisterLoginForm.css
@@ -6,12 +6,13 @@
 }
 
 .container{
-    background:#fff;
+    background-color: rgba(255, 255, 255, 0.2);
     width:450px;
     padding:1.5rem;
     margin:50px auto;
     border-radius:10px;
     box-shadow:0 20px 35px rgba(0,0,1,0.9);
+    backdrop-filter: blur(10px);
 }
 form{
     margin:0 2rem;
@@ -24,7 +25,7 @@ form{
     margin-bottom:0.4rem;
 }
 input{
-    color:inherit;
+    color:white;
     width:100%;
     background-color:transparent;
     border:none;
@@ -32,6 +33,22 @@ input{
     padding-left:1.5rem;
     font-size:15px;
 }
+
+.transparent-dropdown {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    background-color:transparent;
+    color: var(--white);
+}
+
+.transparent-dropdown option {
+    background-color:transparent;
+    color: #333; 
+}
+
 .input-group{
     padding:1% 0;
     position:relative;
@@ -47,7 +64,7 @@ input:focus{
     border-bottom:2px solid hsl(327,90%,28%);
 }
 input::placeholder{
-    color:transparent;
+    color:white;
 }
 label{
     color:#757575;
