--- a/React-frontend/src/components/UserRegisterLoginForm/LoginForm/styles.css
+++ b/React-frontend/src/components/UserRegisterLoginForm/LoginForm/styles.css
@@ -72,10 +72,10 @@
 }
 
 .btn-primary {
-    background-color: #c2fbd7;
-    border-radius: 100px;
-    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
-    color: green;
+    background-color: #d8d8d8;
+    border-radius: 50px;
+    box-shadow: rgba(206, 206, 206, .2) 0 -25px 18px -14px inset,rgba(206, 206, 206, .15) 0 1px 2px,rgba(206, 206, 206, .15) 0 2px 4px,rgba(206, 206, 206, .15) 0 4px 8px,rgba(206, 206, 206, .15) 0 8px 16px,rgba(206, 206, 206, .15) 0 16px 32px;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     display: inline-block;
     font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
@@ -91,6 +91,6 @@
 }
 
 .btn-primary:hover {
-  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
-  transform: scale(1.05) rotate(-1deg);
+    box-shadow: rgba(206, 206, 206, .2) 0 -25px 18px -14px inset,rgba(206, 206, 206, .15) 0 1px 2px,rgba(206, 206, 206, .15) 0 2px 4px,rgba(206, 206, 206, .15) 0 4px 8px,rgba(206, 206, 206, .15) 0 8px 16px,rgba(206, 206, 206, .15) 0 16px 32px;
+    transform: scale(1.05) rotate(-0deg);
 }
