--- a/React-frontend/src/components/Courses/Search/styles.css
+++ b/React-frontend/src/components/Courses/Search/styles.css
@@ -9,6 +9,7 @@
     background-color: var(--darkgrey);
     padding: 1.5rem 3rem;
     border-radius: 4rem;
+    margin-top: 1.5rem;
     margin-bottom: 1.5rem;
   }
   
