--- a/React-frontend/src/components/Courses/List/styles.css
+++ b/React-frontend/src/components/Courses/List/styles.css
@@ -1,28 +1,16 @@
-.list-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    background-color: #f0f0f0; /* Light grey */
-    border-radius: 0.8rem;
-    border: 2px solid #ccc; /* Dark grey */
-    cursor: pointer;
-    padding: 1rem;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Add shadows for 3D effect */
-  }
-  
-  .list-container:hover {
-    border: 2px solid #4CAF50; /* Green */
-    transition: all 0.3s;
-  }
-  
   .list-row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 1rem;
     padding: 1rem;
-    border-bottom: 1px solid #ccc; /* Dark grey */
+    border-bottom: 1px solid #ccc;
+    margin-right: 10%;
+  }
+
+  .list-row:hover {
+    border-bottom: 2px solid var(--white);
+    transition: all 0.1s;
   }
   
   .name-col {
@@ -35,7 +23,7 @@
   .course_name {
     margin: 0;
     font-weight: bold; /* Make course name bold */
-    color: #333; /* Dark grey */
+    color: var(--gray);
     font-size: 3rem; /* Increase font size */
   }
   
@@ -53,4 +41,9 @@
     color: #4CAF50; /* Green */
     font-size: 1rem;
     font-weight: bold; /* Make price bold */
+  }
+
+  table {
+    margin-left: 5%;
+    width: 100%;
   }
