--- a/React-frontend/src/components/Courses/Tabs/styles.css
+++ b/React-frontend/src/components/Courses/Tabs/styles.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     width: 100%;
     gap: 1rem;
+    color: var(--black);
   }
   
   .list-flex {
@@ -20,15 +21,16 @@
     }
   }
 
+  .tab{
+    color: var(--black);
+  }
+  
   .tab-container {
-    background-color: #d8d8d8;
-    border-radius: 100px;
-    box-shadow: rgba(206, 206, 206, .2) 0 -25px 18px -14px inset,rgba(206, 206, 206, .15) 0 1px 2px,rgba(206, 206, 206, .15) 0 2px 4px,rgba(206, 206, 206, .15) 0 4px 8px,rgba(206, 206, 206, .15) 0 8px 16px,rgba(206, 206, 206, .15) 0 16px 32px;
-    color: rgb(0, 0, 0);
+    color: var(--black);
     cursor: pointer;
     display: inline-block;
-    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-    padding: 7px 20px;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    padding: 5px 20px;
     text-align: center;
     text-decoration: none;
     transition: all 250ms;
@@ -37,5 +39,12 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    width: 100%;
+    width: 50%;
+    margin: auto;
+    margin-left: 25%;
+    position: relative;
+  }
+
+  .MuiTabs-indicator {
+    background-color: var(--white) !important;
   }
