--- a/React-frontend/src/components/UserRegisterLoginForm/LoginForm/styles.css
+++ b/React-frontend/src/components/UserRegisterLoginForm/LoginForm/styles.css
@@ -7,27 +7,26 @@
     margin-top: 0px;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     backdrop-filter: blur(10px);
     border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: 1px solid rgba(0, 0, 0, 0.18);
     background-image: url('curved14.jpg');
     background-size: cover;
     background-position: center;
     border-radius:10px;
-    box-shadow:0 20px 35px rgba(0,0,1,0.9);
+    box-shadow:0 20px 35px rgba(0, 0, 0, 0.9);
 }
 
 .login-card {
-    max-width:60vh;
-    margin: auto;
-    margin-top: 12%;
-    padding: 20px;
+    position: relative;
     background-color: rgba(255, 255, 255, 0.2);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    width:450px;
+    padding:1.5rem;
+    margin:5% auto;
+    border-radius:10px;
+    box-shadow:0 20px 35px rgba(0,0,1,0.9);
     backdrop-filter: blur(10px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .card-content {
@@ -72,25 +71,31 @@
 }
 
 .btn-primary {
-    background-color: #d8d8d8;
-    border-radius: 50px;
-    box-shadow: rgba(206, 206, 206, .2) 0 -25px 18px -14px inset,rgba(206, 206, 206, .15) 0 1px 2px,rgba(206, 206, 206, .15) 0 2px 4px,rgba(206, 206, 206, .15) 0 4px 8px,rgba(206, 206, 206, .15) 0 8px 16px,rgba(206, 206, 206, .15) 0 16px 32px;
-    color: rgb(0, 0, 0);
+    background-color: #fff;
+    border: 1px solid #000000;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #000000;
     cursor: pointer;
     display: inline-block;
-    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-    padding: 7px 20px;
+    font-weight: 600;
+    font-family: "Amazon Ember",sans-serif;
+    font-size: 16px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
     text-align: center;
     text-decoration: none;
-    transition: all 250ms;
-    border: 0;
-    font-size: 16px;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    vertical-align: middle;
+    width: 125px;
+    height: 45px;
 }
 
 .btn-primary:hover {
-    box-shadow: rgba(206, 206, 206, .2) 0 -25px 18px -14px inset,rgba(206, 206, 206, .15) 0 1px 2px,rgba(206, 206, 206, .15) 0 2px 4px,rgba(206, 206, 206, .15) 0 4px 8px,rgba(206, 206, 206, .15) 0 8px 16px,rgba(206, 206, 206, .15) 0 16px 32px;
-    transform: scale(1.05) rotate(-0deg);
+    background-color: #000000;
+    text-decoration: none;
 }
