--- a/React-frontend/src/index.css
+++ b/React-frontend/src/index.css
@@ -35,6 +35,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--black);
   overflow-x: hidden;
+  height: 200vh;
 }
 
 h1,
