--- a/React-frontend/src/index.css
+++ b/React-frontend/src/index.css
@@ -33,7 +33,7 @@ body {
   font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--black);
+  background-color: #DCF2F1;
   overflow-x: hidden;
   height: auto;
   margin-bottom: 2%;
@@ -77,7 +77,6 @@ img {
 
 a {
   text-decoration: none;
-  color: var(--white) !important;
 }
 
 .cursor {
