--- a/React-frontend/src/components/Courses/Tabs/styles.css
+++ b/React-frontend/src/components/Courses/Tabs/styles.css
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     width: 100%;
     gap: 1rem;
-    color: var(--black);
+    color: #365486;
   }
   
   .list-flex {
@@ -22,11 +22,11 @@
   }
 
   .tab{
-    color: var(--black);
+    color: #365486;
   }
   
   .tab-container {
-    color: var(--black);
+    color: #365486;
     cursor: pointer;
     display: inline-block;
     font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
@@ -34,17 +34,20 @@
     text-align: center;
     text-decoration: none;
     transition: all 250ms;
-    border: 0;
+    border-radius: 5rem;
     font-size: 16px;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    width: 50%;
-    margin: auto;
-    margin-left: 25%;
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .MuiTabs-indicator {
-    background-color: var(--white) !important;
+    background-color: #365486 !important;
   }
