--- a/React-frontend/src/components/Common/Sidebar/styles.css
+++ b/React-frontend/src/components/Common/Sidebar/styles.css
@@ -57,3 +57,9 @@
     width: 100%;
     margin-top: -7%;
 }
+
+.button-container {
+    display: flex;
+    justify-content: flex-end; /* Align items to the end of the container */
+    margin-right:5%
+}
