--- a/React-frontend/src/components/Course/CourseDetails/styles.css
+++ b/React-frontend/src/components/Course/CourseDetails/styles.css
@@ -1,11 +1,7 @@
 .course-details {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    background-color: #f5f5f5;
-    max-width: 600px;
-    margin: 50px 0px 50px auto; /* Adjust these values as needed */
-  }
+  padding: 1rem;
+  width: 50%;
+}
   
   
   
