--- a/React-frontend/src/components/Course/CourseMedia/styles.css
+++ b/React-frontend/src/components/Course/CourseMedia/styles.css
@@ -1,5 +1,10 @@
 .video-player {
-    width: 720px; /* Width of 1080p resolution */
-    height: 480px; /* Height of 1080p resolution */
-  }
-  
+  padding: 10px;
+  width: 100%; /* Width of 100% to fit the container */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.course-media {
+  padding: 10px;
+  width: 50%; /* Adjust as needed */
+}
